rust-automata/tests/fail/handler_type_mismatch.stderr
error: cannot find attribute `automaton` in this scope
  --> tests/fail/handler_type_mismatch.rs:13:3
   |
13 | #[automaton(
   |   ^^^^^^^^^

warning: unused import: `rust_automata::*`
 --> tests/fail/handler_type_mismatch.rs:1:5
  |
1 | use rust_automata::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
